@@ -771,6 +771,7 @@ Release 2.7.2 - UNRELEASED
     YARN-3978. Configurably turn off the saving of container info in Generic AHS
     (Eric Payne via jeagles)
 
+
   OPTIMIZATIONS
 
   BUG FIXES
@@ -800,6 +801,8 @@ Release 2.7.2 - UNRELEASED
 
     YARN-3990. AsyncDispatcher may overloaded with RMAppNodeUpdateEvent when
     Node is connected/disconnected (Bibin A Chundatt via jlowe)
+
+    YARN-3999. RM hangs on draing events. (Jian He via xgong)
 
 Release 2.7.1 - 2015-07-06 
 
